fix: resolve misalignment of info icon in layout

--- a/src/features/user/Profile/ContributionsMap/Common/common.module.scss
+++ b/src/features/user/Profile/ContributionsMap/Common/common.module.scss
@@ -2,7 +2,7 @@
 
 .mapCreditsContainer {
   position: absolute;
-  right: 12px;
+  right: 45px;
   bottom: 8px;
   cursor: pointer;
 }
